<resources>
    <string name="app_name">Sale Report</string>
    <string name="sales">Sales</string>
    <string name="report">Report</string>
    <string name="master">Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="tab_text_1">Item</string>
    <string name="tab_text_2">Party</string>
    <string name="stock_name">Create Group:</string>
    <string name="group_name">Group Name</string>
    <string name="party_name">Party name</string>
    <string name="party_number">Party number</string>
    <string name="select_unit">Select Unit</string>
    <string name="add_item">Add Item</string>
    <string name="groups">Group</string>
    <string name="add_more">Add More</string>
    <string name="done">Done</string>
</resources>