<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.activity.ItemDetailActivity">

        <LinearLayout
            android:id="@+id/FirstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/groups"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />
                <EditText
                    android:id="@+id/inputGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/edittext_background"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:inputType="text"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:autofillHints="" />

            <TextView
                android:id="@+id/textViewItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/add_item"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/inputItemName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/edittext_background"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:inputType="text"
                android:textAlignment="textStart"
                android:layout_marginEnd="@dimen/_5sdp" />

            <TextView
                android:id="@+id/textViewUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/select_unit"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

                <Spinner
                    android:id="@+id/spinnerItemUnit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="30dp"
                    />
        </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/DoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FirstLayout"
        android:fontFamily="sans-serif-medium"
        android:layout_centerVertical="true"
        android:includeFontPadding="false"
        android:onClick="DoneAddItem"
        android:text="Done"
        app:cornerRadius="@dimen/_10sdp" />


</RelativeLayout>