<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <TextView
        android:id="@+id/textViewLayoutCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="@dimen/_16ssp"
        android:layout_margin="@dimen/_10sdp"

        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/FirstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/montserrat"
        android:text="@string/groups"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputGroupName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/montserrat"
        android:text="@string/add_item"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputItemName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/edittext_background"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/textViewUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/montserrat"
        android:text="@string/select_unit"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerItemUnit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/AddMoreItemButton"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_add"
            android:drawableTint="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:onClick="AddNewItem"
            android:text="Add More" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/DoneButton"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:onClick="DoneAddItem"
            android:text="Done" />

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
</com.google.android.material.card.MaterialCardView>
